Finish InstallApp implementation(untested)